Fix language names overflow on 'In other languages' section
Avoids languages with a long name to result in an overflow for
the language indicator that appears next to each element in the
"In other language section".

--- a/resources/css/ext.translate.editor.css
+++ b/resources/css/ext.translate.editor.css
@@ -187,6 +187,8 @@
 
 .in-other-language .language {
 	color: #565656;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .tux-message-editor .help {
